# frc-rs

./: .gitattributes  .gitmodules  Cargo.toml
.cargo/: config.toml
cscore_sys/: Cargo.toml  build.rs
cscore_sys/src/: bindings.rs
frc/: Cargo.toml
frc-lib/: Cargo.toml
frc-lib/src/: lib.rs
frc-lib/src/pneumatics/: ctre.rs  rev.rs
frc-lib/src/reactor/: driver_station.rs  mod.rs
frc/src/: error.rs  lib.rs
frc/src/dio/: mod.rs
frc/src/pneumatics/: compressor.rs  ctre.rs  ctre_pcm.rs  mod.rs  rev.rs  rev_ph.rs  solenoid.rs
frc/src/reactor/: dio.rs  driver_station.rs  mod.rs  waker_array.rs
ni_frc_libs/: Cargo.toml  build.rs
ni_frc_libs/built-shims/: libNiFpgaLv.so.13
ni_frc_libs/src/: chipobject_bindings.rs  lib.rs  netcomm_bindings.rs  visa_bindings.rs
ni_frc_sys/: Cargo.toml  build.rs
ni_frc_sys/built-shims/: libnirio_emb_can.so.23
ni_frc_sys/src/: netcomm_bindings.rs
ntcore_sys/: Cargo.toml  build.rs
ntcore_sys/ntcore/sources/jni/: edu_wpi_first_networktables_NetworkTablesJNI.h
ntcore_sys/src/: bindings.rs  lib.rs
toy-robot/: Cargo.toml
toy-robot/.cargo/: config.toml
toy-robot/src/: main.rs
toy_robot/: Cargo.toml
toy_robot/.cargo/: config.toml
toy_robot/src/: main.rs
wpi_opencv_cxx/: Cargo.toml  build.rs
wpi_opencv_cxx/opencv/sources/modules/calib3d/: undistort.avx2.cpp  undistort.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/core/: arithm.avx2.cpp  arithm.simd_declarations.hpp  convert.simd_declarations.hpp  convert.vsx3.cpp  convert_scale.simd_declarations.hpp  convert_scale.sse2.cpp  count_non_zero.simd_declarations.hpp  count_non_zero.sse2.cpp  has_non_zero.avx2.cpp  has_non_zero.simd_declarations.hpp  mathfuncs_core.simd_declarations.hpp  mathfuncs_core.sse2.cpp  matmul.simd_declarations.hpp  matmul.sse4_1.cpp  mean.simd_declarations.hpp  mean.sse2.cpp  merge.simd_declarations.hpp  merge.sse2.cpp  split.avx2.cpp  split.simd_declarations.hpp  stat.simd_declarations.hpp  stat.sse4_2.cpp  sum.avx2.cpp  sum.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/core/test/: test_intrin128.avx512_skx.cpp  test_intrin128.simd_declarations.hpp  test_intrin256.avx512_skx.cpp  test_intrin256.simd_declarations.hpp  test_intrin512.avx512_skx.cpp  test_intrin512.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/dnn/int8layers/: layers_common.lasx.cpp  layers_common.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/dnn/layers/: layers_common.rvv.cpp  layers_common.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/dnn/layers/cpu_kernels/: conv_block.avx2.cpp  conv_block.simd_declarations.hpp  conv_depthwise.avx.cpp  conv_depthwise.simd_declarations.hpp  conv_winograd_f63.avx.cpp  conv_winograd_f63.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/features2d/: sift.avx512_skx.cpp  sift.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/gapi/backends/fluid/: gfluidcore_func.avx2.cpp  gfluidcore_func.simd_declarations.hpp  gfluidimgproc_func.avx2.cpp  gfluidimgproc_func.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/imgproc/: accum.simd_declarations.hpp  accum.sse4_1.cpp  bilateral_filter.simd_declarations.hpp  bilateral_filter.sse2.cpp  box_filter.simd_declarations.hpp  box_filter.sse2.cpp  color_hsv.simd_declarations.hpp  color_hsv.sse2.cpp  color_rgb.avx2.cpp  color_rgb.simd_declarations.hpp  color_yuv.avx2.cpp  color_yuv.simd_declarations.hpp  filter.simd_declarations.hpp  filter.sse2.cpp  median_blur.simd_declarations.hpp  median_blur.sse4_1.cpp  morph.simd_declarations.hpp  morph.sse4_1.cpp  smooth.simd_declarations.hpp  smooth.sse4_1.cpp  sumpixels.avx512_skx.cpp  sumpixels.simd_declarations.hpp
wpi_opencv_cxx/opencv/sources/modules/python_bindings_generator/: pyopencv_custom_headers.h
wpi_opencv_cxx/src/: lib.rs
wpihal_ffi/: Cargo.toml  build.rs
wpihal_ffi/src/: bindings.rs  lib.rs
wpihal_sys/: Cargo.toml  build.rs
wpihal_sys/src/: bindings.rs  lib.rs
wpilib_artifact_download/: Cargo.toml
wpilib_artifact_download/src/: lib.rs
wpilib_build/: Cargo.toml
wpilib_build/src/: lib.rs  maven.rs  source.rs
wpilib_cxx/: Cargo.toml  build.rs
wpilib_cxx/src/: lib.rs
wpilib_cxx/wpilibc/sources/: WPILibVersion.cpp
wpilib_hal_ffi/: Cargo.toml  build.rs
wpilib_hal_ffi/src/: lib.rs
wpilib_wpiutil_ffi/: Cargo.toml  build.rs
wpilib_wpiutil_ffi/src/: lib.rs
wpimath_cxx/: Cargo.toml  build.rs
wpimath_cxx/src/: lib.rs
wpinet_cxx/: Cargo.toml  build.rs
wpinet_cxx/src/: lib.rs
wpinet_cxx/wpinet/sources/jni/: edu_wpi_first_net_WPINetJNI.h
wpiutil_ffi/: Cargo.toml  build.rs
wpiutil_ffi/src/: bindings.rs
wpiutil_sys/: Cargo.toml  build.rs
wpiutil_sys/src/: bindings.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
xtask/src/codegen/: cscore_sys.rs  libraries.rs  ni_frc_libs.rs  ni_frc_sys.rs  ntcore_sys.rs  wpi_opencv_cxx.rs  wpihal_ffi.rs  wpihal_sys.rs  wpilib_cxx.rs  wpilib_hal_ffi.rs  wpilib_wpiutil_ffi.rs  wpimath_cxx.rs  wpinet_cxx.rs  wpiutil_ffi.rs  wpiutil_sys.rs
xtask/src/codegen/wrappers/: REVPH.h
