[workspace]
members = [
    "wpihal_sys",
    "wpilib_cxx",
    "wpimath_cxx",
    "wpinet_cxx",
    "wpiutil_sys",
    "ni_frc_sys",
    "ntcore_sys",
    "frc",
    "xtask",
    "toy_robot",
]
resolver = "2"

[workspace.dependencies]
wpihal_sys = { path = "./wpihal_sys" }
wpilib_cxx = { path = "./wpilib_cxx" }
wpimath_cxx = { path = "./wpimath_cxx" }
wpinet_cxx = { path = "./wpinet_cxx" }
wpiutil_sys = { path = "./wpiutil_sys" }
ni_frc_sys = { path = "./ni_frc_sys" }
ntcore_sys = { path = "./ntcore_sys" }
frc = { path = "./frc" }

cxx = "1.0.116"
cxx-build = "1.0.115"
glob = "0.3.1"
cc = "1.0.83"
