[package]
name = "frc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["sync"] }
wpilib_hal_ffi = { path = "../wpilib_hal_ffi" }
wpilib_wpiutil_ffi = { path = "../wpilib_wpiutil_ffi" }
