[package]
name = "frc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
futures = "0.3.30"
once_cell = "1.19.0"
thiserror = "1.0.61"
tokio = { version = "1.35.1", features = ["sync"] }
uom = "0.36.0"
wpihal_sys = { path = "../wpihal_sys" }
