[package]
name = "wpihal_ffi"
version = "0.0.0"
edition = "2021"
links = "wpihal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpiutil_ffi = { path = "../wpiutil_ffi" }

[target.armv7-unknown-linux-gnueabi.dependencies]
ni_frc_libs = { path = "../ni_frc_libs" }

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
glob = "0.3.1"
