[package]
name = "wpihal_sys"
version = "0.0.0"
edition = "2021"
links = "wpihal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpiutil_sys.workspace = true

[target.armv7-unknown-linux-gnueabi.dependencies]
ni_frc_sys.workspace = true

[build-dependencies]
cc = { workspace = true, features = ["parallel"] }
glob.workspace = true
