[package]
name = "wpihal_sys"
version = "0.0.0"
edition = "2021"
links = "wpihal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpiutil_sys = { path = "../wpiutil_sys" }

[target.armv7-unknown-linux-gnueabi.dependencies]
ni_frc_sys = { path = "../ni_frc_sys" }

[build-dependencies]
wpilib_build = { path = "../wpilib_build", features = ["from_source_parallel"] }
