[package]
name = "wpilib_build"
version = "0.1.0"
edition = "2021"

[features]
maven = ["dep:reqwest", "dep:zip"]
from_source = ["dep:cc", "dep:glob"]
from_source_parallel = ["from_source", "cc/parallel"]

[dependencies]
cc = { version = "1.0.99", optional = true }
glob = { version = "0.3.1", optional = true }
reqwest = { version = "0.12.4", optional = true, features = ["blocking"] }
zip = { version = "2.1.3", optional = true, default-features = false, features = ["deflate"] }
