[package]
name = "wpiutil_sys"
version = "0.1.0"
edition = "2021"
links = "wpiutil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.armv7-unknown-linux-gnueabi.dependencies]
ni_frc_sys = { path = "../ni_frc_sys" }

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
glob = "0.3.1"
