[package]
name = "wpiutil_sys"
version = "0.1.0"
edition = "2021"
links = "wpiutil"

[features]
default = ["maven"]
maven = ["wpilib_build/maven"]
from_source = ["wpilib_build/from_source"]
from_source_parallel = ["wpilib_build/from_source_parallel"]

[dependencies]

[target.armv7-unknown-linux-gnueabi.dependencies]
ni_frc_sys = { path = "../ni_frc_sys" }

[build-dependencies]
wpilib_build = { path = "../wpilib_build" }
